# roman_numeral_calculator

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  main.c  roman_numeral.c  roman_numeral.h
tests/: Makefile  Makefile.am  Makefile.in  check_roman_numeral.c
